--- a/packages/@uppy/companion/package.json
+++ b/packages/@uppy/companion/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/transloadit/uppy#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/transloadit/uppy.git"
+    "url": "git+https://github.com/kernel-memory-dump/uppy.git"
   },
   "keywords": [
     "file uploader",
