--- a/packages/@uppy/store-default/package.json
+++ b/packages/@uppy/store-default/package.json
@@ -16,6 +16,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/transloadit/uppy.git"
+    "url": "git+https://github.com/kernel-memory-dump/uppy.git"
   }
 }
