--- a/packages/@uppy/store-redux/package.json
+++ b/packages/@uppy/store-redux/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/transloadit/uppy.git"
+    "url": "git+https://github.com/kernel-memory-dump/uppy.git"
   },
   "dependencies": {
     "cuid": "^2.1.1"
