--- a/packages/@uppy/tus/package.json
+++ b/packages/@uppy/tus/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/transloadit/uppy.git"
+    "url": "git+https://github.com/kernel-memory-dump/uppy.git"
   },
   "dependencies": {
     "@uppy/companion-client": "file:../companion-client",
