--- a/packages/@uppy/utils/package.json
+++ b/packages/@uppy/utils/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/transloadit/uppy.git"
+    "url": "git+https://github.com/kernel-memory-dump/uppy.git"
   },
   "dependencies": {
     "lodash.throttle": "^4.1.1"
